--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-	<!-- Firebase Setup & My Brand JavaScript -->
+	<!-- JavaScript -->
 	<script type="module" src="firebaseSetup.js"></script>
 	<script src="myBrand.js"></script>
-	<script src="contextmenu.js"></script>
 
 	<!-- HTML2Canvas Screenshot Capture -->
 	<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
@@ -1189,71 +1188,76 @@
 			<summary>
 				Email Signatures
 			</summary>
-			<h4>Email Signature 1</h4>
-			<div>
-				<div style="max-width: 50vw; overflow: scroll;">
-					<pre><code>
-	<!-- Signature Code Start -->
-	&lt;table style="color: #000000; font-family: 'Times New Roman'; font-size: medium;"&gt;
-	  &lt;tbody&gt;
-		&lt;tr&gt;
-		  &lt;td style="vertical-align: middle; width: 428px;"&gt;
-			&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;em&gt;&lt;strong&gt;Debbie&nbsp;O'Dell&lt;/strong&gt;&lt;/em&gt;&lt;/p&gt;
-			&lt;table style="font-family: 'Times New Roman';"&gt;
-			  &lt;tbody&gt;
-				&lt;tr&gt;
-				  &lt;td style="vertical-align: middle; width: 428px;"&gt;
-					&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&nbsp;&lt;/p&gt;
-					&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;em&gt;&lt;strong&gt;County Electric Construction Inc.&lt;/strong&gt;&lt;/em&gt;&lt;/p&gt;
-					&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;span style="color: #7b7d9d; font-style: italic;"&gt;&lt;strong&gt;102 Central Avenue, Bridgeport, CT 06607&lt;/strong&gt;&lt;/span&gt;&lt;/p&gt;
-					&lt;p style="color: #7b7d9d; margin: 0px; font-size: 14px; line-height: 18px; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;"&gt;&lt;a style="color: #3176b5;" title="Call County Electric" href="tel:203-367-7500" target="_blank" rel="noopener"&gt;&lt;strong&gt;203-367-7500&lt;/strong&gt;&lt;/a&gt;&lt;br /&gt;&lt;a style="color: #3176b5 !important; font-weight: bold; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';" title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"&gt;www.county-electric.com&lt;/a&gt;&lt;/p&gt;
-				  &lt;/td&gt;
-				&lt;/tr&gt;
-			  &lt;/tbody&gt;
-			&lt;/table&gt;
-			&lt;br /&gt;
-			&lt;p style="color: #7b7d9d; margin: 0px; font-size: 14px; line-height: 18px; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;"&gt;&nbsp;&lt;/p&gt;
-		  &lt;/td&gt;
-		&lt;/tr&gt;
-		&lt;tr&gt;
-		  &lt;td style="vertical-align: top;"&gt;&lt;a title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"&gt;&lt;img style="max-width: 250px; display: inline-block;" src="https://uploads-ssl.webflow.com/622fa7e7f563138da06751e0/625828c68575cf75ee436cba_CENEWLOGO(2917%20%C3%97%201124%20px)-p-500.png" /&gt;&lt;/a&gt;&lt;/td&gt;
-		&lt;/tr&gt;
-	  &lt;/tbody&gt;
-	&lt;/table&gt;
-	<!-- Signature Code End -->
-						</code></pre>
+
+			<!-- Email Signature 1 -->
+			<details>
+				<summary>Email Signature 1</summary>
+				<div>
+					<div style="max-width: 50vw; overflow: scroll;">
+						<pre><code>
+		<!-- Signature Code Start -->
+		&lt;table style="color: #000000; font-family: 'Times New Roman'; font-size: medium;"&gt;
+		  &lt;tbody&gt;
+			&lt;tr&gt;
+			  &lt;td style="vertical-align: middle; width: 428px;"&gt;
+				&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;em&gt;&lt;strong&gt;Debbie&nbsp;O'Dell&lt;/strong&gt;&lt;/em&gt;&lt;/p&gt;
+				&lt;table style="font-family: 'Times New Roman';"&gt;
+				  &lt;tbody&gt;
+					&lt;tr&gt;
+					  &lt;td style="vertical-align: middle; width: 428px;"&gt;
+						&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&nbsp;&lt;/p&gt;
+						&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;em&gt;&lt;strong&gt;County Electric Construction Inc.&lt;/strong&gt;&lt;/em&gt;&lt;/p&gt;
+						&lt;p style="margin: 0px; font-size: 14px; color: #3176b5; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"&gt;&lt;span style="color: #7b7d9d; font-style: italic;"&gt;&lt;strong&gt;102 Central Avenue, Bridgeport, CT 06607&lt;/strong&gt;&lt;/span&gt;&lt;/p&gt;
+						&lt;p style="color: #7b7d9d; margin: 0px; font-size: 14px; line-height: 18px; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;"&gt;&lt;a style="color: #3176b5;" title="Call County Electric" href="tel:203-367-7500" target="_blank" rel="noopener"&gt;&lt;strong&gt;203-367-7500&lt;/strong&gt;&lt;/a&gt;&lt;br /&gt;&lt;a style="color: #3176b5 !important; font-weight: bold; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';" title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"&gt;www.county-electric.com&lt;/a&gt;&lt;/p&gt;
+					  &lt;/td&gt;
+					&lt;/tr&gt;
+				  &lt;/tbody&gt;
+				&lt;/table&gt;
+				&lt;br /&gt;
+				&lt;p style="color: #7b7d9d; margin: 0px; font-size: 14px; line-height: 18px; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;"&gt;&nbsp;&lt;/p&gt;
+			  &lt;/td&gt;
+			&lt;/tr&gt;
+			&lt;tr&gt;
+			  &lt;td style="vertical-align: top;"&gt;&lt;a title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"&gt;&lt;img style="max-width: 250px; display: inline-block;" src="https://uploads-ssl.webflow.com/622fa7e7f563138da06751e0/625828c68575cf75ee436cba_CENEWLOGO(2917%20%C3%97%201124%20px)-p-500.png" /&gt;&lt;/a&gt;&lt;/td&gt;
+			&lt;/tr&gt;
+		  &lt;/tbody&gt;
+		&lt;/table&gt;
+		<!-- Signature Code End -->
+							</code></pre>
+					</div>
+					<div style="max-width: 50vw; overflow: scroll;">
+						<!-- Signature Start -->
+						<table style="color: #000000; font-size: medium;">
+							<tbody>
+							<tr>
+								<td style="vertical-align: middle; width: 428px;">
+									<p style="margin: 0; font-size: 14px; color: #3176b5; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"><em><strong>Debbie&nbsp;O'Dell</strong></em></p>
+									<table>
+										<tbody>
+										<tr>
+											<td style="vertical-align: middle; width: 428px; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';">
+												<p style="margin: 0; font-size: 14px; color: #3176b5;">&nbsp</p>
+												<p style="margin: 0; font-size: 14px; color: #3176b5;"><em><strong>County Electric Construction Inc.</strong></em></p>
+												<p style="margin: 0; font-size: 14px; color: #3176b5;"><span style="color: #7b7d9d; font-style: italic;"><strong>102 Central Avenue, Bridgeport, CT 06607</strong></span></p>
+												<p style="margin: 0; font-size: 14px; color: #7b7d9d; line-height: 18px; font-style: italic;"><a style="color: #3176b5;" title="Call County Electric" href="tel:203-367-7500" target="_blank" rel="noopener"><strong>203-367-7500</strong></a><br /><a style="color: #3176b5 !important; font-weight: bold; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';" title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank">www.county-electric.com</a></p>
+											</td>
+										</tr>
+										</tbody>
+									</table>
+									<br />
+									<p style="color: #7b7d9d; margin: 0; font-size: 14px; line-height: 18px; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;">&nbsp;</p>
+								</td>
+							</tr>
+							<tr>
+								<td style="vertical-align: top;"><a title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"><img alt="" style="max-width: 250px; display: inline-block;" src="https://uploads-ssl.webflow.com/622fa7e7f563138da06751e0/625828c68575cf75ee436cba_CENEWLOGO(2917%20%C3%97%201124%20px)-p-500.png" /></a></td>
+							</tr>
+							</tbody>
+						</table>
+						<!-- / Signature End -->
+					</div>
 				</div>
-				<div style="max-width: 50vw; overflow: scroll;">
-					<!-- Signature Start -->
-					<table style="color: #000000; font-size: medium;">
-						<tbody>
-						<tr>
-							<td style="vertical-align: middle; width: 428px;">
-								<p style="margin: 0; font-size: 14px; color: #3176b5; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';"><em><strong>Debbie&nbsp;O'Dell</strong></em></p>
-								<table>
-									<tbody>
-									<tr>
-										<td style="vertical-align: middle; width: 428px; font-family: Montserrat,monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';">
-											<p style="margin: 0; font-size: 14px; color: #3176b5;">&nbsp</p>
-											<p style="margin: 0; font-size: 14px; color: #3176b5;"><em><strong>County Electric Construction Inc.</strong></em></p>
-											<p style="margin: 0; font-size: 14px; color: #3176b5;"><span style="color: #7b7d9d; font-style: italic;"><strong>102 Central Avenue, Bridgeport, CT 06607</strong></span></p>
-											<p style="margin: 0; font-size: 14px; color: #7b7d9d; line-height: 18px; font-style: italic;"><a style="color: #3176b5;" title="Call County Electric" href="tel:203-367-7500" target="_blank" rel="noopener"><strong>203-367-7500</strong></a><br /><a style="color: #3176b5 !important; font-weight: bold; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif';" title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank">www.county-electric.com</a></p>
-										</td>
-									</tr>
-									</tbody>
-								</table>
-								<br />
-								<p style="color: #7b7d9d; margin: 0; font-size: 14px; line-height: 18px; font-family: Montserrat,Monospace,'Helvetica Neue',Helvetica,Arial,'sans-serif'; font-style: italic;">&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td style="vertical-align: top;"><a title="Visit County Electric Website" href="https://www.county-electric.com" target="_blank"><img alt="" style="max-width: 250px; display: inline-block;" src="https://uploads-ssl.webflow.com/622fa7e7f563138da06751e0/625828c68575cf75ee436cba_CENEWLOGO(2917%20%C3%97%201124%20px)-p-500.png" /></a></td>
-						</tr>
-						</tbody>
-					</table>
-					<!-- / Signature End -->
-				</div>
-			</div>
+			</details>
+
 		</details>
 
 		<!-- Social Media Banners -->
@@ -1261,6 +1265,8 @@
 			<summary>
 				Social Media Banners
 			</summary>
+
+			<!-- Facebook -->
 			<details>
 				<summary>Facebook</summary>
 				<div id="facebookBannerImage" title="Facebook Banner" style="width: 820px; height: 312px; border: 2px solid #000000">
@@ -1268,6 +1274,8 @@
 					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</details>
+
+			<!-- LinkedIn -->
 			<details>
 				<summary>LinkedIn</summary>
 				<div id="linkedinBannerImage" title="LinkedIn Banner" style="width: 1128px; height: 191px; border: 2px solid #000000">
@@ -1275,6 +1283,8 @@
 					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</details>
+
+			<!-- Twitter -->
 			<details>
 				<summary>Twitter</summary>
 				<div id="twitterBannerImage" title="Twitter Banner" style="width: 1500px; height: 500px; border: 2px solid #000000">
@@ -1284,6 +1294,8 @@
 					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</details>
+
+			<!-- YouTube -->
 			<details>
 				<summary>YouTube</summary>
 				<div id="youtubeBannerImage" title="YouTube Banner" style="width: 2048px; height: 326px; border: 2px solid #000000">
@@ -1291,6 +1303,7 @@
 					<img class="contentVar:Icon" alt="" style="height: 50px; width: 50px;" src="media/brandwieldLogos/squareLogo.png"/>
 				</div>
 			</details>
+
 		</details>
 
 		<!-- Business Cards -->
@@ -2330,19 +2343,6 @@
 
 <!-- Notification bar -->
 <div id="snackbar"></div>
-
-<!-- newContentVar context menu -->
-<div id="newContentVarContextMenu"
-	 style="
-		display: none;
-		z-index: 999999999;
-		height: 100px;
-		width: 200px;
-		background-color: #1da1f2;
-	">
-</div>
-
-
 
 <!-- JavaScript -->
 <script>
@@ -4721,6 +4721,7 @@
 
 </script>
 
+<!-- Firebase Auth -->
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
