--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 			<div id="nav-signup" class="auth-tab hidden" onclick="toggleModal('modal-signup')">Signup</div>
 			<div id="nav-logout" class="auth-tab hidden menu-container">
 				<svg xmlns="http://www.w3.org/2000/svg" height="48" width="48">
-					<path
-						d="M10.8 35.05Q14 33 17.175 31.975 20.35 30.95 24 30.95q3.65 0 6.825 1.025Q34 33 37.3 35.05q2.15-2.8 3-5.45.85-2.65.85-5.6 0-7.3-4.925-12.225T24 6.85q-7.3 0-12.225 4.925T6.85 24q0 2.95.875 5.6.875 2.65 3.075 5.45ZM24 26.1q-3.15 0-5.3-2.15t-2.15-5.3q0-3.15 2.15-5.3T24 11.2q3.15 0 5.3 2.15t2.15 5.3q0 3.15-2.15 5.3T24 26.1Zm-.05 18.7q-4.25 0-8.05-1.65-3.8-1.65-6.625-4.5t-4.45-6.625Q3.2 28.25 3.2 23.95q0-4.25 1.65-8.025 1.65-3.775 4.5-6.6Q12.2 6.5 15.975 4.85 19.75 3.2 24.05 3.2q4.25 0 8.025 1.65 3.775 1.65 6.6 4.475 2.825 2.825 4.475 6.6Q44.8 19.7 44.8 24q0 4.25-1.65 8.025-1.65 3.775-4.475 6.625-2.825 2.85-6.6 4.5Q28.3 44.8 23.95 44.8Z" />
+					<path d="M10.8 35.05Q14 33 17.175 31.975 20.35 30.95 24 30.95q3.65 0 6.825 1.025Q34 33 37.3 35.05q2.15-2.8 3-5.45.85-2.65.85-5.6 0-7.3-4.925-12.225T24 6.85q-7.3 0-12.225 4.925T6.85 24q0 2.95.875 5.6.875 2.65 3.075 5.45ZM24 26.1q-3.15 0-5.3-2.15t-2.15-5.3q0-3.15 2.15-5.3T24 11.2q3.15 0 5.3 2.15t2.15 5.3q0 3.15-2.15 5.3T24 26.1Zm-.05 18.7q-4.25 0-8.05-1.65-3.8-1.65-6.625-4.5t-4.45-6.625Q3.2 28.25 3.2 23.95q0-4.25 1.65-8.025 1.65-3.775 4.5-6.6Q12.2 6.5 15.975 4.85 19.75 3.2 24.05 3.2q4.25 0 8.025 1.65 3.775 1.65 6.6 4.475 2.825 2.825 4.475 6.6Q44.8 19.7 44.8 24q0 4.25-1.65 8.025-1.65 3.775-4.475 6.625-2.825 2.85-6.6 4.5Q28.3 44.8 23.95 44.8Z" />
 				</svg> <!-- Default icon when profile pic is missing -->
 				<img alt="" class="hidden" src="" /> <!-- This image will hold the profile pic if any -->
 				<div class="menu" style="text-align: left">
@@ -1565,7 +1564,6 @@
 							<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/location.svg" height="20" width="20" /></span>
 							<input autocomplete="off" id="eventPromotionLocation" type="text" class="cleanCursorInput" size="50" placeholder="location ('Online', '123 Main St, etc)" style="margin-left: 0 !important; padding-left: 0 !important;" onkeyup="eventPromotionLocationUpdate();" />
 							<img id="eventPromotionLocationClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearEventPromotionLocation();" />
-							<img id="eventPromotionLocationGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();"/>
 						</span>
 						<span class="flex-justify-content-end">
 						</span>
@@ -1663,8 +1661,7 @@
 
 						<span class="flex-align-items-center">
 							<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/text.svg" height="20" width="20" /></span>
-							<input autocomplete="off" id="callToActionGlobal" type="url" class="cleanCursorInput" placeholder="call to action" size="50" style="margin-left: 0 !important; padding-left: 0 !important;" onkeyup="callToActionGlobalUpdate();" />
-							<img id="callToActionGlobalGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();"/>
+							<input autocomplete="off" id="callToActionGlobal" type="text" class="cleanCursorInput" placeholder="call to action" size="50" style="margin-left: 0 !important; padding-left: 0 !important;" onkeyup="callToActionGlobalUpdate();" />
 							<img id="callToActionGlobalClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearCallToActionGlobal();"/>
 						</span>
 							<span class="flex-justify-content-end">
@@ -1680,7 +1677,6 @@
 							<span class="flex-align-items-center">
 								<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/url.svg" height="20" width="20" /></span>
 								<input autocomplete="off" id="linkGlobal" type="url" class="cleanCursorInput" placeholder="https://www.example.com" size="50" style="margin-left: 0 !important; padding-left: 0 !important;" onkeyup="linkGlobalUpdate();" />
-								<img id="linkGlobalGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();" />
 								<img id="linkGlobalClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearLinkGlobal();" />
 							</span>
 								<span class="flex-justify-content-end">
@@ -1695,7 +1691,6 @@
 							<span class="flex-align-items-center">
 								<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/image.svg" height="20" width="20" /></span>
 								<input id="squareLogoGlobal" type="file" class="cleanCursorInput" size="40" style="height: 40px; padding-right: 73px !important; padding-top: 10px; margin-left: 0 !important; padding-left: 0 !important;" value="Select Logo" onchange="squareLogoGlobalUpdate()" />
-								<img id="squareLogoGlobalGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();"/>
 								<img id="squareLogoGlobalClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearSquareLogoGlobal();"/>
 							</span>
 							<span class="flex-justify-content-end">
@@ -1719,7 +1714,6 @@
 									<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/image.svg" height="20" width="20" /></span>
 									<input id="primaryColorGlobal" type="color" class="cleanCursorInput" value="#ffffff" size="80" style="height: 40px; padding: 0; margin-left: 0 !important; margin-right: 0 !important;" oninput="primaryColorGlobalUpdate();" />
 									<span id="primaryColorGlobalValueDisplay" class="cleanCursorInputIcon" style="margin-left: 0; margin-right: 10px; width: 100px;">#ffffff</span>
-									<img id="primaryColorGlobalGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();"/>
 									<img id="primaryColorGlobalClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearPrimaryColorGlobal();"/>
 								</span>
 								<span class="flex-justify-content-end">
@@ -1736,7 +1730,6 @@
 									<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/text.svg" height="20" width="20" /></span>
 									<input id="fontColorGlobal" type="color" class="cleanCursorInput" value="#000000" size="80" style="height: 40px; padding: 0; margin-left: 0 !important; margin-right: 0 !important;" oninput="fontColorGlobalUpdate();" />
 									<span id="fontColorGlobalValueDisplay" class="cleanCursorInputIcon" style="margin-left: 0; margin-right: 10px; width: 100px;">#000000</span>
-									<img id="fontColorGlobalGet" class="newContentFieldEnhancement" alt="" src="media/otherIcons/link.svg" onclick="showBrandPopup();"/>
 									<img id="fontColorGlobalClear" class="newContentFieldEnhancement" alt="" src="media/otherIcons/clear.svg" onclick="clearFontColorGlobal();"/>
 								</span>
 								<span class="flex-justify-content-end">
@@ -2231,56 +2224,16 @@
 
 <!-- Brand Popup-->
 <div id="brandPopup">
-
 	<!-- Chrome ignores autocomplete="off" -->
-	<input autocomplete="off" id="brandSearch" class="cleanCursorInput" type="text" size="40" placeholder="search your brand..." onkeyup="updateBrandSearch();" />
-	<img alt="" src="media/otherIcons/clear.svg" height="25" width="25" style="margin-left: 6px;" onclick="closeBrandPopup();"/>
-	<div id="brandRecommendations"></div>
+	<span style="display: flex; align-items: center; justify-content: start;">
+		<input autocomplete="off" id="brandSearch" class="cleanCursorInput" type="text" size="40" placeholder="search your brand..." onkeyup="updateBrandSearch();" />
+		<img alt="" src="media/otherIcons/clear.svg" height="25" width="25" style="margin-left: 6px;" onclick="closeBrandPopup();"/>
+	</span>
+	<span>
+		<span id="brandRecommendationsLabel" style="display: flex; align-items: center; justify-content: start; padding: 10px; font-size: 9px; color: #9d9d9d;"></span>
+		<span id="brandRecommendations"></span>
+	</span>
 	<div id="brandList"></div>
-
-	<!-- We also want to set the other select values to the default item onchange -->
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="brandColors">
-			<option value="" selected>Colors</option>
-			<option value="red">Red</option>
-			<option value="blue">Blue</option>
-		</list>
-	</select>
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="brandFonts">
-			<option value="" selected>Fonts</option>
-			<option value="Arial">Arial</option>
-			<option value="Times New Roman">Times New Roman</option>
-		</list>
-	</select>
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="branLogos">
-			<option value="" selected>Logos</option>
-			<option value="Arial">Arial</option>
-			<option value="Times New Roman">Times New Roman</option>
-		</list>
-	</select>
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="brandPeople">
-			<option value="" selected>People</option>
-			<option value="Arial">Arial</option>
-		</list>
-	</select>
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="brandOffers">
-			<option value="" selected>Offers</option>
-			<option value="Arial">Arial</option>
-			<option value="Times New Roman">Times New Roman</option>
-		</list>
-	</select>
-	<select class="cleanCursorInputSmall" onchange="document.getElementById('brandSearch').value = this.value; clearBrandRecommendations();">
-		<list id="brandSocialMedia">
-			<option value="" selected>Social Media</option>
-			<option value="Arial">Arial</option>
-			<option value="Times New Roman">Times New Roman</option>
-		</list>
-	</select>
-
 </div>
 
 <!-- Signup form in a modal -->
@@ -2368,12 +2321,73 @@
 		}
 	});
 
+	// brandPopup event listener for .newContentVar inputs
+	let newContentVarInputs = document.querySelectorAll('.newContentVar input, .newContentVar textarea');
+	for (let i = 0; i < newContentVarInputs.length; i++) {
+		newContentVarInputs[i].addEventListener('contextmenu', function(event) {
+			event.preventDefault();
+			showBrandPopup();
+			// get values
+			let inputType = event.target.type;
+			let brandSearch = document.getElementById('brandSearch');
+			// set label
+			document.getElementById('brandRecommendationsLabel').innerText = 'Field type: ' + inputType;
+			// set the 'list' attribute for the input field clicked
+			if (inputType === 'text' || inputType === 'textarea') {
+				brandSearch.setAttribute('list', 'text');
+			} else if (inputType === 'url') {
+				brandSearch.setAttribute('list', 'url')
+			} else if (inputType === 'color') {
+				brandSearch.setAttribute('list', 'color')
+			} else if (inputType === 'file') {
+				brandSearch.setAttribute('list', 'file')
+			} else if (inputType === 'date') {
+				brandSearch.setAttribute('list', 'date')
+			} else if (inputType === 'datetime-local') {
+				brandSearch.setAttribute('list', 'datetime-local')
+			} else if (inputType === 'email') {
+				brandSearch.setAttribute('list', 'email')
+			} else if (inputType === 'number') {
+				brandSearch.setAttribute('list', 'number')
+			} else if (inputType === 'tel') {
+				brandSearch.setAttribute('list', 'tel')
+			} else if (inputType === 'time') {
+				brandSearch.setAttribute('list', 'time')
+			}
+			// for each option, show a div with the label and value
+			for (let i = 0; i < document.getElementById('brandSearch').list.options.length; i++) {
+				document.getElementById('brandRecommendations').innerHTML +=
+					'<div class="brandRecommendation" onmouseover="" onclick="">' +
+						'<div class="brandRecommendationInnerText">' + document.getElementById('brandSearch').list.options[i].innerText + '</div>' +
+						'<div class="brandRecommendationValue">' + document.getElementById('brandSearch').list.options[i].value + '</div>' +
+					'</div>';
+				}
+			}
+		)
+	}
+
+	// for any left click outside the brandPopup, close it
+	document.addEventListener('click', function(event) {
+		if (event.target.closest('#brandPopup') === null) {
+			closeBrandPopup();
+		}
+	});
+
+	// when any .newContentVar element is focused, close the brandPopup
+	let newContentVar = document.querySelectorAll('.newContentVar input, .newContentVar textarea');
+	for (let i = 0; i < newContentVar.length; i++) {
+		newContentVar[i].addEventListener('focus', function(event) {
+			closeBrandPopup();
+		});
+	}
+
 	// select app section
 	function selectContentType(tabby) { // need the active tab to stay blue (not just on click)
 		let i; let x = document.getElementsByClassName("tabby");
 		for (i = 0; i < x.length; i++) { x[i].style.display = "none"; }
 		document.getElementById(tabby).style.display = "block";
 		document.getElementById('hookGlobal').focus();
+		closeBrandPopup(); // close brand popup if it is open
 	}
 
 	// select newContent type
@@ -2388,6 +2402,7 @@
 	function valueSelectorUpdate() {
 		globalContentFieldsStart.style.display = 'block';
 		globalContentFieldsEnd.style.display = 'block';
+		closeBrandPopup(); // close brand popup if it is open
 		if (valueSelector.value === 'genericPostFields') {
 			genericPostFields.style.display = 'block';
 			companyUpdateFields.style.display = 'none';
@@ -3524,8 +3539,8 @@
 	function clearHookResolutionGlobalHashtags() {
 		document.getElementById("hookResolutionGlobalHashtagsHere").innerText = "";
 	}
-	function clearGenericPostHashtags() {
-		document.getElementById("genericPostHashtagsHere").innerText = "";
+	function clearGenericPostBodyHashtags() {
+		document.getElementById("genericPostBodyHashtagsHere").innerText = "";
 	}
 	function clearCompanyUpdateHeadlineHashtags() {
 		document.getElementById("companyUpdateHeadlineHashtagsHere").innerText = "";
@@ -3855,7 +3870,7 @@
 		for (let i = 0; i < element.length; i++) {
 			element[i].innerHTML = "";
 		}
-		clearGenericPostHashtags();
+		clearGenericPostBodyHashtags();
 	}
 	function clearCompanyUpdateHeadline(){
 		document.getElementById("companyUpdateHeadline").value = "";
@@ -4348,9 +4363,6 @@
 		// set the focus to the search bar
 		document.getElementById('brandSearch').focus();
 
-		// based on the field usage, populate assign the appropriate list to the search bar
-		document.getElementById('brandSearch').setAttribute('list', 'brandy'); //  for now, placeholder is 'brandColors'
-
 	}
 	function closeBrandPopup() {
 		document.getElementById('brandPopup').style.display = 'none';
@@ -4376,8 +4388,8 @@
 					// for each search result, show a div with the label and value of the option
 					document.getElementById('brandRecommendations').innerHTML +=
 						'<div class="brandRecommendation" onclick="brandSearchValue = this.innerHTML">' +
-							'<span class="brandRecommendationInnerText">' + document.getElementById('brandSearch').list.options[i].innerText + '</span>' +
-							'&nbsp;<span class="brandRecommendationValue">' + document.getElementById('brandSearch').list.options[i].value + '</span>' +
+							'<div class="brandRecommendationInnerText">' + document.getElementById('brandSearch').list.options[i].innerText + '</div>' +
+							'<div class="brandRecommendationValue">' + document.getElementById('brandSearch').list.options[i].value + '</div>' +
 						'</div>';
 				}
 			}
@@ -4959,11 +4971,59 @@ onAuthStateChanged(auth, user => {
 so we need to place them here, not sure why, I guess we create 2 identical data sets for now?
 1 here for search and 1 for the brandRecommendations? -->
 
-<datalist id="brandy">
-	<option value="1">Apple</option>
-	<option value="1">Banana</option>
-	<option value="1">Cherry</option>
-	<option value="1">Tomato</option>
+<datalist id="text">
+	<option value="text">text</option>
+	<option value="text">text</option>
+</datalist>
+
+<datalist id="url">
+	<option value="url">url</option>
+	<option value="url">url</option>
+</datalist>
+
+<datalist id="color">
+	<option value="color">color</option>
+	<option value="color">color</option>
+</datalist>
+
+<datalist id="file">
+	<option value="file">file</option>
+	<option value="file">file</option>
+</datalist>
+
+<datalist id="date">
+	<option value="date">date</option>
+	<option value="date">date</option>
+</datalist>
+
+<datalist id="time">
+	<option value="time">time</option>
+	<option value="time">time</option>
+</datalist>
+
+<datalist id="datetime-local">
+	<option value="datetime">datetime</option>
+	<option value="datetime">datetime</option>
+</datalist>
+
+<datalist id="email">
+	<option value="email">email</option>
+	<option value="email">email</option>
+</datalist>
+
+<datalist id="tel">
+	<option value="tel">tel</option>
+	<option value="tel">tel</option>
+</datalist>
+
+<datalist id="number">
+	<option value="number">number</option>
+	<option value="number">number</option>
+</datalist>
+
+<datalist id="location">
+	<option value="location">location</option>
+	<option value="location">location</option>
 </datalist>
 
 </body>
