--- a/index.html
+++ b/index.html
@@ -4946,7 +4946,7 @@ onAuthStateChanged(auth, user => {
 <!-- 'list' inside <select> elements will not be searchable as the 'list' attribute value,
 so we need to place them here, not sure why, I guess we create 2 identical data sets for now?
 1 here for search and 1 for the brandRecommendations? -->
-<!-- Datalists, filled by firebaseSetup.js, used in the brandPopup -->
+<!-- datalists, filled by firebaseSetup.js, used in the brandPopup -->
 <datalist id="text">
 	<option value="text">text</option>
 	<option value="text">text</option>
