--- a/mySite/mySite.html
+++ b/mySite/mySite.html
@@ -55,7 +55,7 @@
 <!-- Scroll2Top Button -->
 <div class="scroll-container">
 	<a class="scroll2Top" href="#top">
-		<img alt="" height="25px" width="25px" src="/media/otherIcons/arrowUp.svg" />
+		<img alt="" height="25px" width="25px" src="/media/icons/arrowUp.svg" />
 	</a>
 </div>
 
@@ -92,11 +92,11 @@
 				<img class="person1Headshot" alt="" src="" /><br>
 				<text class="person1Bio"></text><br>
 				<div class="personSocialMedia">
-					<a class="person1FacebookUrl"><img class="person1FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/facebook.png" /></a>
-					<a class="person1InstagramUrl"><img class="person1InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/instagram.png" /></a>
-					<a class="person1LinkedinUrl"><img class="person1LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/linkedin.png" /></a>
-					<a class="person1TwitterUrl"><img class="person1TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/twitter.png" /></a>
-					<a class="person1TiktokUrl"><img class="person1TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/tiktok.png" /></a>
+					<a class="person1FacebookUrl"><img class="person1FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/facebook.png" /></a>
+					<a class="person1InstagramUrl"><img class="person1InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/instagram.png" /></a>
+					<a class="person1LinkedinUrl"><img class="person1LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/linkedin.png" /></a>
+					<a class="person1TwitterUrl"><img class="person1TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/twitter.png" /></a>
+					<a class="person1TiktokUrl"><img class="person1TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/tiktok.png" /></a>
 				</div>
 			</div>
 			<div class="personCard">
@@ -105,11 +105,11 @@
 				<img class="person2Headshot" alt="" src="" /><br>
 				<text class="person2Bio"></text><br>
 				<div class="personSocialMedia">
-					<a class="person2FacebookUrl"><img class="person2FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/facebook.png" /></a>
-					<a class="person2InstagramUrl"><img class="person2InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/instagram.png" /></a>
-					<a class="person2LinkedinUrl"><img class="person2LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/linkedin.png" /></a>
-					<a class="person2TwitterUrl"><img class="person2TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/twitter.png" /></a>
-					<a class="person2TiktokUrl"><img class="person2TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/tiktok.png" /></a>
+					<a class="person2FacebookUrl"><img class="person2FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/facebook.png" /></a>
+					<a class="person2InstagramUrl"><img class="person2InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/instagram.png" /></a>
+					<a class="person2LinkedinUrl"><img class="person2LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/linkedin.png" /></a>
+					<a class="person2TwitterUrl"><img class="person2TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/twitter.png" /></a>
+					<a class="person2TiktokUrl"><img class="person2TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/tiktok.png" /></a>
 				</div>
 			</div>
 			<div class="personCard">
@@ -118,11 +118,11 @@
 				<img class="person3Headshot" alt="" src="" /><br>
 				<text class="person3Bio"></text><br>
 				<div class="personSocialMedia">
-					<a class="person3FacebookUrl"><img class="person3FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/facebook.png" /></a>
-					<a class="person3InstagramUrl"><img class="person3InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/instagram.png" /></a>
-					<a class="person3LinkedinUrl"><img class="person3LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/linkedin.png" /></a>
-					<a class="person3TwitterUrl"><img class="person3TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/twitter.png" /></a>
-					<a class="person3TiktokUrl"><img class="person3TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/tiktok.png" /></a>
+					<a class="person3FacebookUrl"><img class="person3FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/facebook.png" /></a>
+					<a class="person3InstagramUrl"><img class="person3InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/instagram.png" /></a>
+					<a class="person3LinkedinUrl"><img class="person3LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/linkedin.png" /></a>
+					<a class="person3TwitterUrl"><img class="person3TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/twitter.png" /></a>
+					<a class="person3TiktokUrl"><img class="person3TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/tiktok.png" /></a>
 				</div>
 			</div>
 			<div class="personCard">
@@ -131,11 +131,11 @@
 				<img class="person4Headshot" alt="" src="" /><br>
 				<text class="person4Bio"></text><br>
 				<div class="personSocialMedia">
-					<a class="person4FacebookUrl"><img class="person4FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/facebook.png" /></a>
-					<a class="person4InstagramUrl"><img class="person4InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/instagram.png" /></a>
-					<a class="person4LinkedinUrl"><img class="person4LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/linkedin.png" /></a>
-					<a class="person4TwitterUrl"><img class="person4TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/twitter.png" /></a>
-					<a class="person4TiktokUrl"><img class="person4TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/socialMediaIcons/tiktok.png" /></a>
+					<a class="person4FacebookUrl"><img class="person4FacebookUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/facebook.png" /></a>
+					<a class="person4InstagramUrl"><img class="person4InstagramUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/instagram.png" /></a>
+					<a class="person4LinkedinUrl"><img class="person4LinkedinUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/linkedin.png" /></a>
+					<a class="person4TwitterUrl"><img class="person4TwitterUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/twitter.png" /></a>
+					<a class="person4TiktokUrl"><img class="person4TiktokUrl" style="height: 30px; width: 30px;" alt="" src="/media/icons/socialMedia/tiktok.png" /></a>
 				</div>
 			</div>
 		</div>
@@ -201,11 +201,11 @@
 	<!-- Social Media -->
 	<div>
 		<p style="font-size: 26px">Social Media</p>
-		<a class="facebookUrl"><img class="facebookUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/socialMediaIcons/facebook.png" /></a>
-		<a class="linkedinUrl"><img class="linkedinUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/socialMediaIcons/instagram.png" /></a>
-		<a class="instagramUrl"><img class="instagramUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/socialMediaIcons/linkedin.png" /></a>
-		<a class="twitterUrl"><img class="twitterUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/socialMediaIcons/twitter.png" /></a>
-		<a class="tiktokUrl"><img class="tiktokUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/socialMediaIcons/tiktok.png" /></a>
+		<a class="facebookUrl"><img class="facebookUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/icons/socialMedia/facebook.png" /></a>
+		<a class="linkedinUrl"><img class="linkedinUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/icons/socialMedia/instagram.png" /></a>
+		<a class="instagramUrl"><img class="instagramUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/icons/socialMedia/linkedin.png" /></a>
+		<a class="twitterUrl"><img class="twitterUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/icons/socialMedia/twitter.png" /></a>
+		<a class="tiktokUrl"><img class="tiktokUrl" style="height: 30px !important; width: 30px !important;" alt="" src="/media/icons/socialMedia/tiktok.png" /></a>
 	</div>
 	<!-- Logo -->
 	<div>
